--- a/eventos/lista.html
+++ b/eventos/lista.html
@@ -20,7 +20,7 @@
             <div class="mobile">
                
                 <div class="mobile-menu menu-color">
-                    <p></p>
+                    <p>{{logado}}</p>
                     <p>Eventos</p>
                     <i class="material-icons"> close</i>
                 </div>
