--- a/eventos/index.html
+++ b/eventos/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trilhas Adventure</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="src/login.css">
+    <link rel="stylesheet" href="src/app.css">
 </head>
 
 <body>
@@ -17,8 +17,8 @@
                 <img src="src/logo.png" alt="">
             </div>
             <div class="login">
-                <input type="text" name="" id="" v-model="snh">
-                <button @click.prevent.stop="login(snh)">Logar</button>
+                <input type="text" name="senha" id="senha" v-model="senha">
+                <button @click.prevent.stop="login(senha)">Logar</button>
             </div>
             <p v-if="info">{{info}}</p>
 
@@ -27,7 +27,7 @@
    
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js "></script>
-    <script src="src/login.js"></script>
+    <script src="src/app.js"></script>
 
 </body>
 
