muitas melhorias no pc de casa hd

--- a/eventos/lista.html
+++ b/eventos/lista.html
@@ -137,7 +137,7 @@
                                         <p>{{item.titulo}}</p>
                                         <p>{{item.responsavel}}</p>
                                     </div>  
-                                    <i class="material-icons"> close</i>
+                                    <i class="material-icons" @click="excluir(item.id)"> close</i>
                                 </div>
                             </div>
                        </div>
