trabalho no jquery do ui

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,8 +21,8 @@
         <div class="m-body">
             <div class="m-box1">
                 <div class="mb-container">
-                    <div class="m-mochila">
-                        <div class="box"><h1>box</h1></div>
+                    <div id="main1" class="m-mochila">
+                        <div id="box" class="box"><h1>box A</h1></div>
                         <div class="box"><h1>box</h1></div>
                         <div class="box"><h1>box</h1></div>
                         <div class="box"><h1>box</h1></div>
@@ -40,7 +40,7 @@
                     <p>Mochila</p><p>Casaco</p><p>Calça</p>
                 </div>
                 <div class="mb-container">
-                    <div class="m-mochila">
+                    <div id="main2" class="m-mochila">
                         <div class="box"><h1>box</h1></div>
                         <div class="box"><h1>box</h1></div>
                         <div class="box"><h1>box</h1></div>
@@ -88,6 +88,7 @@
    
 
     <script src="jquery.js"></script>
+    <script src="jquery-ui.js"></script>
     <script src="app.js"></script>
 
 </body>
