--- a/ui/ui.html
+++ b/ui/ui.html
@@ -54,14 +54,20 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <p id="content">Rest</p>
+
+    <!-- <div class="container">
         <div class="box2">
             <div class="box camisa-1" >Box 1</div>
             <div class="box camisa-2" >Box 2</div>
             <div class="box camisa-3" >Box 3</div>
         </div>
-        <div class="box1"></div>
-    </div>
+        <div class="box1">
+            
+        </div>
+    </div> -->
+
 
     <script src="jquery.js"></script>
     <script src="jquery-ui.js"></script>
