inicio da capa na lista

--- a/eventos/index.html
+++ b/eventos/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="src/app.css">
 </head>
 
-<body>
+<body class="lbody">
     <div id="app">     
         <div class="logo-box">
             <div class="logo">
